# Raft_By_Rust

./: .gitignore  Cargo.toml  README.md  build.rs
.metadata/server_1/: raft.metadata
.metadata/server_2/: raft.metadata
.metadata/server_3/: raft.metadata
.metadata/server_4/: raft.metadata
.metadata/server_5/: raft.metadata
.snapshot/server_1/: raft-10-10.snapshot.metadata
.snapshot/server_2/: raft-10-10.snapshot.metadata
.snapshot/server_3/: raft-10-10.snapshot.metadata
.snapshot/server_4/: raft-10-10.snapshot.metadata
.snapshot/server_5/: raft-10-10.snapshot.metadata
app/: client.rs  server1.rs
docs/: Metadata教程.md  progect.md  timer设计与使用.md  tonic学习.md  压测.md  领导者选举机制.md
hello_tonic/: client.rs  server.rs
logs/: server.log.2025-06-17-14  server.log.2025-06-17-16
proto/: helloworld.proto  raft.proto
src/: lib.rs  main.rs
src/benchmarks/: mod.rs  time_bench.rs
src/raft/: config.rs  consensus.rs  lib.rs  log.rs  metadata.rs  mod.rs  peer.rs  rpc.rs  snapshot.rs  state_machine.rs  timer.rs  timer_old.rs  util.rs
